feat: upgrade to 2.2.0, add Fury serializer, and refactor measurement handling - Bump project version to 2.2.0‑RELEASE and introduce Apache Fury (fury‑core 0.9.0) as a new dependency. - Switch `eventTimeMs` fields in `Measurment` and `TrxEntry` from primitive `long` to boxed `Long`. - Add `customSubject` support to `Measurment` and update expiration logic. - Refactor `FraudProcessor`:   * Introduce fixed‑window processing with new constants (`FIXED_WINDOW_PREFIX`, `FIXED_WINDOW`).   * Split session execution into sliding‑window (`processSlidingWindow`) and fixed‑window (`processFixedWindow`) paths.   * Update alert‑set handling and subject/key construction to use extended subjects. - Rewrite `RocksDBService`:   * Use thread‑safe Fury for binary serialization.   * Implement a sharded asynchronous writer with timeout‑fallback and direct write path.   * Add support for `WrapperMeasurment` persistence. - Minor clean‑ups: updated imports, logging, and utility methods across the codebase.